<resources>
    <string name="app_name">Writter</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Verify Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email Address</string>

    <!-- Nav drawer and menus -->
    <string name="nav_drawer_home">Home</string>
    <string name="nav_drawer_recommendations">Recommendations</string>
    <string name="nav_drawer_my_stories">My Stories</string>
    <string name="nav_drawer_create_story">Create Story</string>
    <string name="nav_drawer_logout">Sign Out</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_back_to_top">Back to Top</string>

    <!-- Strings related to login activity -->
    <string name="activity_login_title">Sign in to Writter</string>
    <string name="activity_login_action_sign_in">Sign in</string>
    <string name="activity_login_action_sign_in_short">Sign in</string>
    <string name="activity_login_action_register">Create an account</string>
    <string name="activity_login_error_invalid_username">This email address is invalid</string>
    <string name="activity_login_error_invalid_password">This password is too short</string>
    <string name="activity_login_error_field_required">This field is required</string>

    <!-- String related to registration activity -->
    <string name="activity_registration_title">Create a Writter account</string>
    <string name="activity_registration_action_register">Create account</string>
    <string name="activity_registration_action_login">Already have an account?</string>

    <!-- String related to create/edit story -->
    <string name="activity_create_story_title">Write a Story</string>
    <string name="story_prompt_title">Title</string>
    <string name="story_prompt_text">Story</string>
    <string name="create_story_action">Publish</string>
    <string name="update_story_action">Update Story</string>
    <string name="cancel_update_story_action">Cancel</string>
    <string name="message_publish_success">Published successfully</string>
    <string name="message_update_success">Saved successfully</string>
    <string name="message_publish_failed">Publish failed</string>
    <string name="message_update_failed">Save failed</string>
    <string name="discard_changes_dialog_title">Discard Changes?</string>
    <string name="discard_changes_dialog_message">
        Are you sure you want to navigate away from this screen? Any unsaved changes will be lost.
    </string>
    <string name="discard_changes_dialog_ok">Discard</string>
    <string name="discard_changes_dialog_no">Cancel</string>


    <!-- Story recycler view -->
    <string name="action_load_previous_stories">Load newer stories</string>
    <string name="action_load_next_stories">Load older stories</string>
    <string name="no_results">No stories are available</string>
    <string name="no_stories">You do have have any stories</string>
    <string name="no_recommendations">You do not have any recommendations</string>

    <string name="activity_main_title">Writter</string>
    <string name="activity_recommendations_title">Recommendations</string>
    <string name="activity_my_stories_title">My Stories</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>