<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigate_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/nav_drawer_home" />
        <item
            android:id="@+id/navigate_recommended"
            android:icon="@drawable/ic_star_black"
            android:title="@string/nav_drawer_recommendations" />
        <item
            android:id="@+id/navigate_my_stories"
            android:icon="@drawable/ic_import_contacts_black"
            android:title="@string/nav_drawer_my_stories" />
        <item
            android:id="@+id/navigate_create"
            android:icon="@drawable/ic_note_add_black"
            android:title="@string/nav_drawer_create_story" />
        <item
            android:id="@+id/navigate_logout"
            android:icon="@drawable/ic_exit_to_app_black"
            android:title="@string/nav_drawer_logout" />
    </group>
</menu>